# imfun

./: README.md  imfun.py  pyproject.toml  setup.py
delete/: setup.py
src/: imfun.py
src/image_functions (1).egg-info/: PKG-INFO
src/image_functions.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/imfun/: __init__.py  __main__.py
tutorials/: imex_im2label.py  imex_isoareas.py  imex_label_sequence_points.py  imex_roi_stats.py  imex_roi_stats_in_detph.py  imfun1.py
under_development/: main.py
