# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-functions"
version = "0.1.5"
description = "Image Processing Functions"
readme = "README.md"
authors = [{ name = "Marlon Rodrigues Garcia", email = "marlon.garcia@unesp.br" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["image processing", "digital image", "image functions"]
dependencies = [
    "numpy",
    "opencv-contrib-python",
    "matplotlib",
    "scipy",
    "pandas",
    "pynput",
    "pandas",
    "tifffile",
]

requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/MarlonGarcia/imfun"

[project.scripts]
realpython = "imfun.__main__:main"